--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:targetSdkVersion="17" />
 
     <!-- Declares the input method service -->
-    <application android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:allowBackup="false">
+    <application android:label="@string/app_name" android:icon="@mipmap/icon" android:allowBackup="false">
 
         <!--This meta-data tag is required to use Google Play Services.-->
         <meta-data android:name="com.google.android.gms.version"
@@ -31,10 +31,6 @@
         <activity android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
-
-        <activity android:name=".littleBear"
-            android:theme="@style/AppTheme.CustomTheme"
-            ></activity>
 
         <activity android:name=".AD_view"
             android:theme="@style/AppTheme.CustomTheme"
