--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.google.android.gms:play-services:6.+'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    //compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
